@@ -20,7 +20,6 @@ package org.apache.pinot.common.utils.fetcher;
 
 import java.io.File;
 import java.net.URI;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -48,17 +47,17 @@ public class SegmentFetcherFactory {
   private static final Logger LOGGER = LoggerFactory.getLogger(SegmentFetcherFactory.class);
   private static final Map<String, SegmentFetcher> SEGMENT_FETCHER_MAP = new HashMap<>();
   private static final SegmentFetcher HTTP_SEGMENT_FETCHER = new HttpSegmentFetcher();
+  private static final SegmentFetcher HTTPS_SEGMENT_FETCHER = new HttpsSegmentFetcher();
   private static final SegmentFetcher PINOT_FS_SEGMENT_FETCHER = new PinotFSSegmentFetcher();
 
-  /**
-   * Initializes the segment fetcher factory. This method should only be called once.
-   */
+  /// Initializes the segment fetcher factory. This method should only be called once.
   public static void init(PinotConfiguration config)
       throws Exception {
     HTTP_SEGMENT_FETCHER.init(config); // directly, without sub-namespace
+    HTTPS_SEGMENT_FETCHER.init(config); // directly, without sub-namespace
     PINOT_FS_SEGMENT_FETCHER.init(config); // directly, without sub-namespace
 
-    List<String> protocols = config.getProperty(PROTOCOLS_KEY, Collections.emptyList());
+    List<String> protocols = config.getProperty(PROTOCOLS_KEY, List.of());
     for (String protocol : protocols) {
       String segmentFetcherClassName = config.getProperty(protocol + SEGMENT_FETCHER_CLASS_KEY_SUFFIX);
       SegmentFetcher segmentFetcher;
@@ -96,10 +95,9 @@ public class SegmentFetcherFactory {
     }
   }
 
-  /**
-   * Returns the segment fetcher associated with the given protocol, or the default segment fetcher
-   * ({@link HttpSegmentFetcher} for "http" and "https", {@link PinotFSSegmentFetcher} for other protocols).
-   */
+  /// Returns the segment fetcher associated with the given protocol, or the default segment fetcher
+  /// ([HttpSegmentFetcher] for "http", [HttpsSegmentFetcher] for "https",
+  /// [PinotFSSegmentFetcher] for other protocols).
   public static SegmentFetcher getSegmentFetcher(String protocol) {
     SegmentFetcher segmentFetcher = SEGMENT_FETCHER_MAP.get(protocol);
     if (segmentFetcher != null) {
@@ -111,39 +109,34 @@ public class SegmentFetcherFactory {
       }
       switch (protocol) {
         case CommonConstants.HTTP_PROTOCOL:
-        case CommonConstants.HTTPS_PROTOCOL:
           return HTTP_SEGMENT_FETCHER;
+        case CommonConstants.HTTPS_PROTOCOL:
+          return HTTPS_SEGMENT_FETCHER;
         default:
           return PINOT_FS_SEGMENT_FETCHER;
       }
     }
   }
 
-  /**
-   * Fetches a segment from URI location to local.
-   */
+  /// Fetches a segment from URI location to local.
   public static void fetchSegmentToLocal(URI uri, File dest)
       throws Exception {
     getSegmentFetcher(uri.getScheme()).fetchSegmentToLocal(uri, dest);
   }
 
-  /**
-   * Fetches a segment from URI location to local.
-   */
+  /// Fetches a segment from URI location to local.
   public static void fetchSegmentToLocal(String uri, File dest)
       throws Exception {
     fetchSegmentToLocal(new URI(uri), dest);
   }
 
-  /**
-   * Fetches a segment from URI location to local and untar it in a streamed manner.
-   * @param uri URI
-   * @param tempRootDir Tmp dir to download
-   * @param maxStreamRateInByte limit the rate to write download-untar stream to disk, in bytes
-   *                  -1 for no disk write limit, 0 for limit the writing to min(untar, download) rate
-   * @return the untared directory
-   * @throws Exception
-   */
+  /// Fetches a segment from URI location to local and untar it in a streamed manner.
+  /// @param uri URI
+  /// @param tempRootDir Tmp dir to download
+  /// @param maxStreamRateInByte limit the rate to write download-untar stream to disk, in bytes
+  ///                  -1 for no disk write limit, 0 for limit the writing to min(untar, download) rate
+  /// @return the untared directory
+  /// @throws Exception
   public static File fetchAndStreamUntarToLocal(URI uri, File tempRootDir, long maxStreamRateInByte,
       AtomicInteger attempts)
       throws Exception {
@@ -157,11 +150,9 @@ public class SegmentFetcherFactory {
     return fetchAndStreamUntarToLocal(new URI(uri), tempRootDir, maxStreamRateInByte, attempts);
   }
 
-  /**
-   * Fetches a segment from a URI location to a local file and decrypts it if needed
-   * @param uri remote segment location
-   * @param dest local file
-   */
+  /// Fetches a segment from a URI location to a local file and decrypts it if needed
+  /// @param uri remote segment location
+  /// @param dest local file
   public static void fetchAndDecryptSegmentToLocal(String uri, File dest, @Nullable String crypterName)
       throws Exception {
     if (crypterName == null) {
@@ -192,5 +183,13 @@ public class SegmentFetcherFactory {
       PinotCrypter crypter = PinotCrypterFactory.create(crypterName);
       crypter.decrypt(tempDownloadedFile, dest);
     }
+  }
+
+  /// Fetches a segment from any uri in the given supplier's list, and untars it to local in a streamed manner.
+  public static File fetchAndStreamUntarToLocal(String segmentName, String scheme, Supplier<List<URI>> uriSupplier,
+      File dest, long maxStreamRateInByte)
+      throws Exception {
+    return getSegmentFetcher(scheme).fetchUntarSegmentToLocalStreamed(segmentName, uriSupplier, dest,
+        maxStreamRateInByte);
   }
 }
