@@ -24,7 +24,7 @@ import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.Authorization;
 import io.swagger.annotations.SecurityDefinition;
 import io.swagger.annotations.SwaggerDefinition;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import javax.inject.Inject;
 import javax.ws.rs.Consumes;
@@ -71,9 +71,7 @@ public class PinotApplicationQuotaRestletResource {
   @Inject
   PinotHelixResourceManager _pinotHelixResourceManager;
 
-  /**
-   * API to get application quota configs. Will return empty map if application quotas are not defined at all.
-   */
+  /// API to get application quota configs. Will return empty map if application quotas are not defined at all.
   @GET
   @Produces(MediaType.APPLICATION_JSON)
   @Path("/applicationQuotas")
@@ -84,13 +82,11 @@ public class PinotApplicationQuotaRestletResource {
     if (quotas != null) {
       return quotas;
     } else {
-      return Collections.emptyMap();
+      return Map.of();
     }
   }
 
-  /**
-   * API to get application quota config. Will return null if application quotas is not defined.
-   */
+  /// API to get application quota config. Will return null if application quotas is not defined.
   @GET
   @Produces(MediaType.APPLICATION_JSON)
   @Path("/applicationQuotas/{appName}")
@@ -109,14 +105,12 @@ public class PinotApplicationQuotaRestletResource {
 
     HelixAdmin helixAdmin = _pinotHelixResourceManager.getHelixAdmin();
     String defaultQuota =
-        helixAdmin.getConfig(scope, Collections.singletonList(CommonConstants.Helix.APPLICATION_MAX_QUERIES_PER_SECOND))
+        helixAdmin.getConfig(scope, List.of(CommonConstants.Helix.APPLICATION_MAX_QUERIES_PER_SECOND))
             .get(CommonConstants.Helix.APPLICATION_MAX_QUERIES_PER_SECOND);
     return defaultQuota != null ? Double.parseDouble(defaultQuota) : null;
   }
 
-  /**
-   * API to update the quota config for application.
-   */
+  /// API to update the quota config for application.
   @POST
   @Produces(MediaType.APPLICATION_JSON)
   @Consumes(MediaType.APPLICATION_JSON)
