@@ -23,7 +23,6 @@ import com.google.common.base.Preconditions;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -52,13 +51,11 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 
-/**
- * For a given table, this class finds out if there is any partition group for which there's no consuming segment in
- * ideal state. If so, it emits three metrics:
- *   - Total number of partitions with missing consuming segments including
- *   - Number of newly added partitions for which there's no consuming segment (there's no completed segment either)
- *   - Maximum duration (in minutes) that a partition hasn't had a consuming segment
- */
+/// For a given table, this class finds out if there is any partition group for which there's no consuming segment in
+/// ideal state. If so, it emits three metrics:
+///   - Total number of partitions with missing consuming segments including
+///   - Number of newly added partitions for which there's no consuming segment (there's no completed segment either)
+///   - Maximum duration (in minutes) that a partition hasn't had a consuming segment
 public class MissingConsumingSegmentFinder {
   private static final Logger LOGGER = LoggerFactory.getLogger(MissingConsumingSegmentFinder.class);
 
@@ -85,7 +82,7 @@ public class MissingConsumingSegmentFinder {
     });
     try {
       PauseState pauseState = PinotLLCRealtimeSegmentManager.extractTablePauseState(idealState);
-      PinotTableIdealStateBuilder.getStreamMetadataList(streamConfigs, Collections.emptyList(),
+      PinotTableIdealStateBuilder.getStreamMetadataList(streamConfigs, List.of(),
               pauseState == null ? new ArrayList<>() : pauseState.getIndexOfInactiveTopics(), false)
           .forEach(streamMetadata -> {
             for (PartitionGroupMetadata metadata : streamMetadata.getPartitionGroupMetadataList()) {
