@@ -22,7 +22,6 @@ import java.io.File;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 import org.apache.commons.io.FileUtils;
@@ -50,13 +49,11 @@ import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
 
-/**
- * Functional tests for compression type feature.
- * The tests use three kinds of input data
- * (1) string
- * (2) integer
- * (3) long
- */
+/// Functional tests for compression type feature.
+/// The tests use three kinds of input data
+/// (1) string
+/// (2) integer
+/// (3) long
 public class NoDictionaryCompressionQueriesTest extends BaseQueriesTest {
   private static final File INDEX_DIR = new File(FileUtils.getTempDirectory(), "CompressionCodecQueriesTest");
   private static final String TABLE_NAME = "MyTable";
@@ -139,27 +136,27 @@ public class NoDictionaryCompressionQueriesTest extends BaseQueriesTest {
             + RAW_LZ4_INDEX_COLUMNS.size() + RAW_GZIP_INDEX_COLUMNS.size());
 
     for (String indexColumn : RAW_SNAPPY_INDEX_COLUMNS) {
-      fieldConfigs.add(new FieldConfig(indexColumn, FieldConfig.EncodingType.RAW, Collections.emptyList(),
+      fieldConfigs.add(new FieldConfig(indexColumn, FieldConfig.EncodingType.RAW, List.of(),
           FieldConfig.CompressionCodec.SNAPPY, null));
     }
 
     for (String indexColumn : RAW_ZSTANDARD_INDEX_COLUMNS) {
-      fieldConfigs.add(new FieldConfig(indexColumn, FieldConfig.EncodingType.RAW, Collections.emptyList(),
+      fieldConfigs.add(new FieldConfig(indexColumn, FieldConfig.EncodingType.RAW, List.of(),
           FieldConfig.CompressionCodec.ZSTANDARD, null));
     }
 
     for (String indexColumn : RAW_PASS_THROUGH_INDEX_COLUMNS) {
-      fieldConfigs.add(new FieldConfig(indexColumn, FieldConfig.EncodingType.RAW, Collections.emptyList(),
+      fieldConfigs.add(new FieldConfig(indexColumn, FieldConfig.EncodingType.RAW, List.of(),
           FieldConfig.CompressionCodec.PASS_THROUGH, null));
     }
 
     for (String indexColumn : RAW_LZ4_INDEX_COLUMNS) {
-      fieldConfigs.add(new FieldConfig(indexColumn, FieldConfig.EncodingType.RAW, Collections.emptyList(),
+      fieldConfigs.add(new FieldConfig(indexColumn, FieldConfig.EncodingType.RAW, List.of(),
           FieldConfig.CompressionCodec.LZ4, null));
     }
 
     for (String indexColumn : RAW_GZIP_INDEX_COLUMNS) {
-      fieldConfigs.add(new FieldConfig(indexColumn, FieldConfig.EncodingType.RAW, Collections.emptyList(),
+      fieldConfigs.add(new FieldConfig(indexColumn, FieldConfig.EncodingType.RAW, List.of(),
           FieldConfig.CompressionCodec.GZIP, null));
     }
 
@@ -245,9 +242,7 @@ public class NoDictionaryCompressionQueriesTest extends BaseQueriesTest {
     return rows;
   }
 
-  /**
-   * Tests for basic compression codec queries.
-   */
+  /// Tests for basic compression codec queries.
   @Test
   public void testQueriesWithCompressionCodec() {
     String query = "SELECT SNAPPY_STRING, ZSTANDARD_STRING, PASS_THROUGH_STRING, LZ4_STRING, "
@@ -269,9 +264,7 @@ public class NoDictionaryCompressionQueriesTest extends BaseQueriesTest {
     testSelectQueryHelper(query, expected.size(), expected);
   }
 
-  /**
-   * Tests for filter over integer values compression codec queries.
-   */
+  /// Tests for filter over integer values compression codec queries.
   @Test
   public void testZstandardIntegerFilterQueriesWithCompressionCodec() {
     String query = "SELECT ZSTANDARD_INTEGER FROM MyTable WHERE ZSTANDARD_INTEGER > 1000 LIMIT 1000";
@@ -286,9 +279,7 @@ public class NoDictionaryCompressionQueriesTest extends BaseQueriesTest {
     testSelectQueryHelper(query, expected.size(), expected);
   }
 
-  /**
-   * Tests for filter over integer values LZ4 compression codec queries.
-   */
+  /// Tests for filter over integer values LZ4 compression codec queries.
   @Test
   public void testLZ4IntegerFilterQueriesWithCompressionCodec() {
     String query = "SELECT LZ4_INTEGER FROM MyTable WHERE LZ4_INTEGER > 1000 LIMIT 1000";
@@ -303,9 +294,7 @@ public class NoDictionaryCompressionQueriesTest extends BaseQueriesTest {
     testSelectQueryHelper(query, expected.size(), expected);
   }
 
-  /**
-   * Tests for filter over integer values GZIP compression codec queries.
-   */
+  /// Tests for filter over integer values GZIP compression codec queries.
   @Test
   public void testGZIPIntegerFilterQueriesWithCompressionCodec() {
     String query = "SELECT GZIP_INTEGER FROM MyTable WHERE GZIP_INTEGER > 1000 LIMIT 1000";
@@ -320,9 +309,7 @@ public class NoDictionaryCompressionQueriesTest extends BaseQueriesTest {
     testSelectQueryHelper(query, expected.size(), expected);
   }
 
-  /**
-   * Tests for filter over integer values compression codec queries.
-   */
+  /// Tests for filter over integer values compression codec queries.
   @Test
   public void testSnappyIntegerFilterQueriesWithCompressionCodec() {
     String query = "SELECT SNAPPY_INTEGER FROM MyTable WHERE SNAPPY_INTEGER > 100 LIMIT 1000";
@@ -337,9 +324,7 @@ public class NoDictionaryCompressionQueriesTest extends BaseQueriesTest {
     testSelectQueryHelper(query, expected.size(), expected);
   }
 
-  /**
-   * Tests for filter over integer values compression codec queries.
-   */
+  /// Tests for filter over integer values compression codec queries.
   @Test
   public void testPassThroughIntegerFilterQueriesWithCompressionCodec() {
     String query = "SELECT PASS_THROUGH_INTEGER FROM MyTable WHERE PASS_THROUGH_INTEGER > 100 LIMIT 1000";
@@ -354,9 +339,7 @@ public class NoDictionaryCompressionQueriesTest extends BaseQueriesTest {
     testSelectQueryHelper(query, expected.size(), expected);
   }
 
-  /**
-   * Tests for filter over string values zstandard compression codec queries.
-   */
+  /// Tests for filter over string values zstandard compression codec queries.
   @Test
   public void testZstandardStringFilterQueriesWithCompressionCodec() {
     String query = "SELECT ZSTANDARD_STRING FROM MyTable WHERE ZSTANDARD_STRING = 'hello_world_123' LIMIT 1000";
@@ -371,9 +354,7 @@ public class NoDictionaryCompressionQueriesTest extends BaseQueriesTest {
     testSelectQueryHelper(query, expected.size(), expected);
   }
 
-  /**
-   * Tests for filter over string values LZ4 compression codec queries.
-   */
+  /// Tests for filter over string values LZ4 compression codec queries.
   @Test
   public void testLZ4StringFilterQueriesWithCompressionCodec() {
     String query = "SELECT LZ4_STRING FROM MyTable WHERE LZ4_STRING = 'hello_world_123' LIMIT 1000";
@@ -388,9 +369,7 @@ public class NoDictionaryCompressionQueriesTest extends BaseQueriesTest {
     testSelectQueryHelper(query, expected.size(), expected);
   }
 
-  /**
-   * Tests for filter over string values GZIP compression codec queries.
-   */
+  /// Tests for filter over string values GZIP compression codec queries.
   @Test
   public void testGZIPStringFilterQueriesWithCompressionCodec() {
     String query = "SELECT GZIP_STRING FROM MyTable WHERE GZIP_STRING = 'hello_world_123' LIMIT 1000";
@@ -405,9 +384,7 @@ public class NoDictionaryCompressionQueriesTest extends BaseQueriesTest {
     testSelectQueryHelper(query, expected.size(), expected);
   }
 
-  /**
-   * Tests for filter over string values snappy compression codec queries.
-   */
+  /// Tests for filter over string values snappy compression codec queries.
   @Test
   public void testSnappyStringFilterQueriesWithCompressionCodec() {
     String query = "SELECT SNAPPY_STRING FROM MyTable WHERE SNAPPY_STRING = 'hello_world_123' LIMIT 1000";
