@@ -22,7 +22,6 @@ import com.google.common.base.Preconditions;
 import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import java.io.File;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -83,9 +82,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 
-/**
- * Base class for minion starter
- */
+/// Base class for minion starter
 public abstract class BaseMinionStarter implements ServiceStartable {
   private static final Logger LOGGER = LoggerFactory.getLogger(BaseMinionStarter.class);
 
@@ -160,18 +157,16 @@ public abstract class BaseMinionStarter implements ServiceStartable {
             CommonConstants.Helix.DEFAULT_FLAPPING_TIME_WINDOW_MS));
   }
 
-  /**
-   * Registers a task executor factory.
-   * <p>This is for pluggable task executor factories.
-   */
+  /// Registers a task executor factory.
+  ///
+  /// This is for pluggable task executor factories.
   public void registerTaskExecutorFactory(PinotTaskExecutorFactory taskExecutorFactory) {
     _taskExecutorFactoryRegistry.registerTaskExecutorFactory(taskExecutorFactory);
   }
 
-  /**
-   * Registers an event observer factory.
-   * <p>This is for pluggable event observer factories.
-   */
+  /// Registers an event observer factory.
+  ///
+  /// This is for pluggable event observer factories.
   public void registerEventObserverFactory(MinionEventObserverFactory eventObserverFactory) {
     _eventObserverFactoryRegistry.registerEventObserverFactory(eventObserverFactory);
   }
@@ -211,10 +206,9 @@ public abstract class BaseMinionStarter implements ServiceStartable {
     return _config;
   }
 
-  /**
-   * Starts the Pinot Minion instance.
-   * <p>Should be called after all classes of task executor get registered.
-   */
+  /// Starts the Pinot Minion instance.
+  ///
+  /// Should be called after all classes of task executor get registered.
   @Override
   public void start()
       throws Exception {
@@ -246,7 +240,6 @@ public abstract class BaseMinionStarter implements ServiceStartable {
     minionMetrics.setValueOfGlobalGauge(MinionGauge.ZK_JUTE_MAX_BUFFER,
         Integer.getInteger(ZkSystemPropertyKeys.JUTE_MAXBUFFER, 0xfffff));
     MinionMetrics.register(minionMetrics);
-    minionContext.setMinionMetrics(minionMetrics);
     minionContext.setAllowDownloadFromServer(_config.isAllowDownloadFromServer());
 
     // Install default SSL context if necessary (even if not force-enabled everywhere)
@@ -367,7 +360,7 @@ public abstract class BaseMinionStarter implements ServiceStartable {
       updated |= HelixHelper.updateTlsPort(instanceConfig, _tlsPort);
     }
     updated |= HelixHelper.addDefaultTags(instanceConfig,
-        () -> Collections.singletonList(CommonConstants.Helix.UNTAGGED_MINION_INSTANCE));
+        () -> List.of(CommonConstants.Helix.UNTAGGED_MINION_INSTANCE));
     updated |= HelixHelper.removeDisabledPartitions(instanceConfig);
     updated |= HelixHelper.updatePinotVersion(instanceConfig);
     updated |= HelixHelper.updateMaxConcurrentTasksPerInstance(instanceConfig,
@@ -377,9 +370,7 @@ public abstract class BaseMinionStarter implements ServiceStartable {
     }
   }
 
-  /**
-   * Stops the Pinot Minion instance.
-   */
+  /// Stops the Pinot Minion instance.
   @Override
   public void stop() {
     try {
