@@ -21,8 +21,8 @@ package org.apache.pinot.perf;
 import com.google.common.base.Preconditions;
 import java.io.File;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeSet;
@@ -71,22 +71,25 @@ import org.openjdk.jmh.runner.Runner;
 import org.openjdk.jmh.runner.options.OptionsBuilder;
 
 
-/**
- * JMH benchmark for DISTINCT over scalar {@code JSON_EXTRACT_INDEX(...)} on a table that is explicitly configured with
- * a JSON index on {@code tags}. The benchmark state is intended for single-threaded JMH execution and is not
- * thread-safe.
- *
- * <p>The base sample queries are:
- * {@code SELECT DISTINCT JSON_EXTRACT_INDEX(tags, '$.instance', 'STRING') AS tag_value FROM myTable WHERE
- * JSON_MATCH(tags, 'REGEXP_LIKE("$.instance", ''.*test.*'')')}
- * and
- * {@code SELECT DISTINCT JSON_EXTRACT_INDEX(tags, '$.instance', 'STRING', '') AS tag_value FROM myTable WHERE
- * JSON_MATCH(tags, 'REGEXP_LIKE("$.instance", ''.*test.*'')')}.
- *
- * <p>Pinot assigns {@code SELECT DISTINCT} queries without an explicit limit a default limit of {@code 10}. The
- * benchmark validates the exact sample query for planning, then executes the same query with an explicit large limit so
- * the full matching distinct set is measured and compared across operators.
- */
+/// JMH benchmark for DISTINCT over scalar `JSON_EXTRACT_INDEX(...)` on a table that is explicitly configured with
+/// a JSON index on `tags`. The benchmark state is intended for single-threaded JMH execution and is not
+/// thread-safe.
+///
+/// The base sample queries are:
+/// ```
+/// SELECT DISTINCT JSON_EXTRACT_INDEX(tags, '$.instance', 'STRING') AS tag_value FROM myTable
+///   WHERE JSON_MATCH(tags, 'REGEXP_LIKE("$.instance", ''.*test.*'')')
+/// ```
+/// and
+/// ```
+/// SELECT DISTINCT JSON_EXTRACT_INDEX(tags, '$.instance', 'STRING', '') AS tag_value FROM myTable
+///   WHERE JSON_MATCH(tags, 'REGEXP_LIKE("$.instance", ''.*test.*'')')
+/// ```
+/// .
+///
+/// Pinot assigns `SELECT DISTINCT` queries without an explicit limit a default limit of `10`. The benchmark
+/// validates the exact sample query for planning, then executes the same query with an explicit large limit so the full
+/// matching distinct set is measured and compared across operators.
 @State(Scope.Benchmark)
 @BenchmarkMode(Mode.AverageTime)
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
@@ -126,7 +129,7 @@ public class BenchmarkJsonIndexDistinct {
 
   private static final TableConfig TABLE_CONFIG = new TableConfigBuilder(TableType.OFFLINE)
       .setTableName(TABLE_NAME)
-      .setJsonIndexColumns(Collections.singletonList(TAGS_COLUMN))
+      .setJsonIndexColumns(List.of(TAGS_COLUMN))
       .build();
 
   private static final Schema SCHEMA = new Schema.SchemaBuilder()
@@ -191,9 +194,9 @@ public class BenchmarkJsonIndexDistinct {
     Preconditions.checkState(samplePinotQuery.getLimit() == 10,
         "Unexpected default DISTINCT limit for sample query: %s", samplePinotQuery.getLimit());
 
-    QueryContext sampleBaselineQueryContext = compileQueryContext(sampleQuery, Collections.emptyMap());
+    QueryContext sampleBaselineQueryContext = compileQueryContext(sampleQuery, Map.of());
     QueryContext sampleOptimizedQueryContext = compileQueryContext(sampleQuery,
-        Collections.singletonMap(CommonConstants.Broker.Request.QueryOptionKey.USE_INDEX_BASED_DISTINCT_OPERATOR,
+        Map.of(CommonConstants.Broker.Request.QueryOptionKey.USE_INDEX_BASED_DISTINCT_OPERATOR,
             "true"));
     Preconditions.checkState(planOperator(sampleBaselineQueryContext) instanceof DistinctOperator,
         "Exact %s sample query must plan to DistinctOperator without %s", _queryVariant,
@@ -202,9 +205,9 @@ public class BenchmarkJsonIndexDistinct {
         "Exact " + _queryVariant + " sample query", planOperator(sampleOptimizedQueryContext));
 
     String benchmarkQuery = sampleQuery + " LIMIT " + _distinctLimit;
-    _baselineQueryContext = compileQueryContext(benchmarkQuery, Collections.emptyMap());
+    _baselineQueryContext = compileQueryContext(benchmarkQuery, Map.of());
     _optimizedQueryContext = compileQueryContext(benchmarkQuery,
-        Collections.singletonMap(CommonConstants.Broker.Request.QueryOptionKey.USE_INDEX_BASED_DISTINCT_OPERATOR,
+        Map.of(CommonConstants.Broker.Request.QueryOptionKey.USE_INDEX_BASED_DISTINCT_OPERATOR,
             "true"));
 
     Preconditions.checkState(planOperator(_baselineQueryContext) instanceof DistinctOperator,
