@@ -20,8 +20,8 @@ package org.apache.pinot.plugin.stream.kafka40.utils;
 
 import java.io.Closeable;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 import java.util.concurrent.ExecutionException;
@@ -37,10 +37,8 @@ import org.testcontainers.kafka.KafkaContainer;
 import org.testcontainers.utility.DockerImageName;
 
 
-/**
- * MiniKafkaCluster for Kafka 4.x using Testcontainers with KRaft mode (no ZooKeeper).
- * Uses the apache/kafka-native image for fast startup.
- */
+/// MiniKafkaCluster for Kafka 4.x using Testcontainers with KRaft mode (no ZooKeeper).
+/// Uses the apache/kafka-native image for fast startup.
 public final class MiniKafkaCluster implements StreamDataServerStartable, Closeable {
 
   private static final String KAFKA_IMAGE = "apache/kafka:4.0.0";
@@ -97,7 +95,7 @@ public final class MiniKafkaCluster implements StreamDataServerStartable, Closea
       int retries = 5;
       while (retries > 0) {
         try {
-          adminClient.createTopics(Collections.singletonList(newTopic)).all().get();
+          adminClient.createTopics(List.of(newTopic)).all().get();
           return;
         } catch (ExecutionException e) {
           if (e.getCause() instanceof org.apache.kafka.common.errors.TimeoutException) {
@@ -123,7 +121,7 @@ public final class MiniKafkaCluster implements StreamDataServerStartable, Closea
   @Override
   public void deleteTopic(String topicName) {
     try (AdminClient adminClient = getOrCreateAdminClient()) {
-      adminClient.deleteTopics(Collections.singletonList(topicName)).all().get();
+      adminClient.deleteTopics(List.of(topicName)).all().get();
     } catch (InterruptedException e) {
       Thread.currentThread().interrupt();
       throw new RuntimeException("Interrupted while deleting topic: " + topicName, e);
@@ -152,7 +150,7 @@ public final class MiniKafkaCluster implements StreamDataServerStartable, Closea
   @Override
   public void createPartitions(String topicName, int numPartitions) {
     try (AdminClient adminClient = getOrCreateAdminClient()) {
-      adminClient.createPartitions(Collections.singletonMap(topicName, NewPartitions.increaseTo(numPartitions))).all()
+      adminClient.createPartitions(Map.of(topicName, NewPartitions.increaseTo(numPartitions))).all()
           .get();
     } catch (InterruptedException e) {
       Thread.currentThread().interrupt();
