@@ -48,9 +48,7 @@ import org.roaringbitmap.PeekableIntIterator;
 import org.roaringbitmap.RoaringBitmap;
 
 
-/**
- * Class that executes the keyed group by aggregations for the multistage AggregateOperator.
- */
+/// Class that executes the keyed group by aggregations for the multistage AggregateOperator.
 @SuppressWarnings({"rawtypes", "unchecked"})
 public class MultistageGroupByExecutor {
   private final int[] _groupKeyIds;
@@ -178,9 +176,7 @@ public class MultistageGroupByExecutor {
     return _numGroupsWarningLimit;
   }
 
-  /**
-   * Performs group-by aggregation for the data in the block.
-   */
+  /// Performs group-by aggregation for the data in the block.
   public void processBlock(MseBlock.Data block) {
     if (!_aggType.isInputIntermediateFormat()) {
       processAggregate(block);
@@ -189,13 +185,11 @@ public class MultistageGroupByExecutor {
     }
   }
 
-  /**
-   * Get aggregation result limited to first {@code maxRows} rows, ordered with {@code comparator}.
-   */
+  /// Get aggregation result limited to first `maxRows` rows, ordered with `comparator`.
   public List<Object[]> getResult(Comparator<Object[]> comparator, int maxRows) {
     int numGroups = Math.min(_groupIdGenerator.getNumGroups(), maxRows);
     if (numGroups == 0) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     // TODO: Change it to use top-K algorithm
@@ -235,11 +229,11 @@ public class MultistageGroupByExecutor {
     return result;
   }
 
-  /**  Get aggregation result limited to {@code maxRows} rows. */
+  /// Get aggregation result limited to `maxRows` rows.
   public List<Object[]> getResult(int maxRows) {
     int numGroups = Math.min(_groupIdGenerator.getNumGroups(), maxRows);
     if (numGroups == 0) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     List<Object[]> rows = new ArrayList<>(numGroups);
@@ -440,10 +434,8 @@ public class MultistageGroupByExecutor {
     }
   }
 
-  /**
-   * Creates the group by key for each row. Converts the key into a 0-index based int value that can be used by
-   * GroupByAggregationResultHolders used in v1 aggregations.
-   */
+  /// Creates the group by key for each row. Converts the key into a 0-index based int value that can be used by
+  /// GroupByAggregationResultHolders used in v1 aggregations.
   private int[] generateGroupByKeys(MseBlock.Data block) {
     return block.isRowHeap()
         ? generateGroupByKeys(block.asRowHeap().getRows())
@@ -487,10 +479,8 @@ public class MultistageGroupByExecutor {
     return intKeys;
   }
 
-  /**
-   * Creates the group by key for each row. Converts the key into a 0-index based int value that can be used by
-   * GroupByAggregationResultHolders used in v1 aggregations.
-   */
+  /// Creates the group by key for each row. Converts the key into a 0-index based int value that can be used by
+  /// GroupByAggregationResultHolders used in v1 aggregations.
   private int[] generateGroupByKeys(MseBlock.Data block, int numMatchedRows, RoaringBitmap matchedBitmap) {
     return block.isRowHeap()
         ? generateGroupByKeys(block.asRowHeap().getRows(), numMatchedRows, matchedBitmap)
