@@ -66,6 +66,8 @@ import org.apache.pinot.segment.local.realtime.impl.nullvalue.MutableNullValueVe
 import org.apache.pinot.segment.local.segment.index.datasource.MutableDataSource;
 import org.apache.pinot.segment.local.segment.index.dictionary.DictionaryIndexType;
 import org.apache.pinot.segment.local.segment.index.map.MutableMapDataSource;
+import org.apache.pinot.segment.local.segment.index.openstruct.MutableOpenStructDataSource;
+import org.apache.pinot.segment.local.segment.index.openstruct.MutableOpenStructIndex;
 import org.apache.pinot.segment.local.segment.readers.PinotSegmentColumnReader;
 import org.apache.pinot.segment.local.segment.readers.PinotSegmentRecordReader;
 import org.apache.pinot.segment.local.segment.virtualcolumn.VirtualColumnContext;
@@ -74,9 +76,10 @@ import org.apache.pinot.segment.local.upsert.ComparisonColumns;
 import org.apache.pinot.segment.local.upsert.PartitionUpsertMetadataManager;
 import org.apache.pinot.segment.local.upsert.RecordInfo;
 import org.apache.pinot.segment.local.upsert.UpsertContext;
+import org.apache.pinot.segment.local.upsert.UpsertUtils;
+import org.apache.pinot.segment.local.upsert.UpsertViewManager;
 import org.apache.pinot.segment.local.utils.FixedIntArrayOffHeapIdMap;
 import org.apache.pinot.segment.local.utils.IdMap;
-import org.apache.pinot.segment.local.utils.IngestionUtils;
 import org.apache.pinot.segment.spi.AggregationFunctionType;
 import org.apache.pinot.segment.spi.MutableSegment;
 import org.apache.pinot.segment.spi.SegmentMetadata;
@@ -106,6 +109,7 @@ import org.apache.pinot.segment.spi.partition.PartitionFunction;
 import org.apache.pinot.spi.config.table.ColumnPartitionConfig;
 import org.apache.pinot.spi.config.table.IndexConfig;
 import org.apache.pinot.spi.config.table.MultiColumnTextIndexConfig;
+import org.apache.pinot.spi.config.table.OpenStructIndexConfig;
 import org.apache.pinot.spi.config.table.SegmentPartitionConfig;
 import org.apache.pinot.spi.config.table.UpsertConfig;
 import org.apache.pinot.spi.config.table.ingestion.AggregationConfig;
@@ -122,6 +126,7 @@ import org.apache.pinot.spi.utils.BooleanUtils;
 import org.apache.pinot.spi.utils.ByteArray;
 import org.apache.pinot.spi.utils.FixedIntArray;
 import org.apache.pinot.spi.utils.MapUtils;
+import org.apache.pinot.spi.utils.UuidUtils;
 import org.apache.pinot.spi.utils.builder.TableNameBuilder;
 import org.roaringbitmap.BatchIterator;
 import org.roaringbitmap.buffer.MutableRoaringBitmap;
@@ -148,7 +153,6 @@ public class MutableSegmentImpl implements MutableSegment {
   private final String _realtimeTableName;
   private final String _segmentName;
   private final Schema _schema;
-  private final String _timeColumnName;
   private final int _capacity;
   private final SegmentMetadata _segmentMetadata;
   private final boolean _offHeap;
@@ -209,7 +213,6 @@ public class MutableSegmentImpl implements MutableSegment {
     _realtimeTableName = config.getTableNameWithType();
     _segmentName = config.getSegmentName();
     _schema = config.getSchema();
-    _timeColumnName = config.getTimeColumnName();
     _capacity = config.getCapacity();
     SegmentZKMetadata segmentZKMetadata = config.getSegmentZKMetadata();
     _segmentMetadata = new SegmentMetadataImpl(TableNameBuilder.extractRawTableName(_realtimeTableName),
@@ -294,14 +297,15 @@ public class MutableSegmentImpl implements MutableSegment {
     // and no metrics have dictionary. If not enabled, the map returned is null.
     _recordIdMap = enableMetricsAggregationIfPossible(config);
 
-    Map<String, Pair<String, ValueAggregator>> metricsAggregators = Collections.emptyMap();
+    Map<String, Pair<String, ValueAggregator>> metricsAggregators = Map.of();
     if (_recordIdMap != null) {
       metricsAggregators = getMetricsAggregators(config);
     }
 
     Set<IndexType> specialIndexes =
         Sets.newHashSet(StandardIndexes.dictionary(), // dictionary implements other contract
-            StandardIndexes.nullValueVector()); // null value vector implements other contract
+            StandardIndexes.nullValueVector(), // null value vector implements other contract
+            StandardIndexes.openStruct()); // open-struct is constructed out-of-band below
 
     // Initialize for each column
     boolean hasColumnWithReuseMutableTextIndex = false;
@@ -371,16 +375,9 @@ public class MutableSegmentImpl implements MutableSegment {
       } else {
         dictionary = null;
         if (!fieldSpec.isSingleValueField()) {
-          // Raw MV columns
-          switch (storedType) {
-            case INT:
-            case LONG:
-            case FLOAT:
-            case DOUBLE:
-              break;
-            default:
-              throw new UnsupportedOperationException(
-                  "Unsupported data type: " + dataType + " for MV no-dictionary column: " + column);
+          if (!dataType.isFixedWidth()) {
+            throw new UnsupportedOperationException(
+                "Unsupported data type: " + dataType + " for MV no-dictionary column: " + column);
           }
         }
       }
@@ -424,6 +421,15 @@ public class MutableSegmentImpl implements MutableSegment {
           } else {
             dictionary = new SameValueMutableDictionary(rawValueForTextIndex, dictionary);
           }
+        }
+      }
+
+      if (dataType == DataType.OPEN_STRUCT && fieldSpec instanceof ComplexFieldSpec) {
+        IndexConfig openStructConfig = indexConfigs.getConfig(StandardIndexes.openStruct());
+        if (openStructConfig instanceof OpenStructIndexConfig && openStructConfig.isEnabled()) {
+          MutableOpenStructIndex openStructIndex = new MutableOpenStructIndex(column, (ComplexFieldSpec) fieldSpec,
+              (OpenStructIndexConfig) openStructConfig, _memoryManager, _capacity);
+          mutableIndexes.put(StandardIndexes.openStruct(), openStructIndex);
         }
       }
 
@@ -502,7 +508,7 @@ public class MutableSegmentImpl implements MutableSegment {
     } else if (CollectionUtils.isNotEmpty(segmentConfig.getIngestionAggregationConfigs())) {
       return fromAggregationConfig(segmentConfig);
     } else {
-      return Collections.emptyMap();
+      return Map.of();
     }
   }
 
@@ -515,7 +521,7 @@ public class MutableSegmentImpl implements MutableSegment {
         Maps.newHashMapWithExpectedSize(metricNames.size());
     for (String metricName : metricNames) {
       columnNameToAggregator.put(metricName, Pair.of(metricName,
-          ValueAggregatorFactory.getValueAggregator(AggregationFunctionType.SUM, Collections.emptyList())));
+          ValueAggregatorFactory.getValueAggregator(AggregationFunctionType.SUM, List.of())));
     }
     return columnNameToAggregator;
   }
@@ -560,15 +566,13 @@ public class MutableSegmentImpl implements MutableSegment {
     }
   }
 
-  /**
-   * Decide whether a given column should be dictionary encoded or not
-   * @param fieldSpec field spec of column
-   * @param column column name
-   * @return true if column is no-dictionary, false if dictionary encoded
-   */
+  /// Decide whether a given column should be dictionary encoded or not
+  /// @param fieldSpec field spec of column
+  /// @param column column name
+  /// @return true if column is no-dictionary, false if dictionary encoded
   private boolean isNoDictionaryColumn(FieldIndexConfigs indexConfigs, FieldSpec fieldSpec, String column) {
     DataType dataType = fieldSpec.getDataType();
-    if (dataType == DataType.MAP) {
+    if (dataType == DataType.MAP || dataType == DataType.OPEN_STRUCT) {
       return true;
     }
     if (indexConfigs == null) {
@@ -577,20 +581,17 @@ public class MutableSegmentImpl implements MutableSegment {
     if (indexConfigs.getConfig(StandardIndexes.dictionary()).isEnabled()) {
       return false;
     }
-    // Earlier we didn't support noDict in consuming segments for STRING and BYTES columns.
-    // So even if the user had the column in noDictionaryColumns set in table config, we still
-    // created dictionary in consuming segments.
-    // Later on we added this support. There is a particular impact of this change on the use cases
-    // that have set noDict on their STRING dimension columns for other performance
-    // reasons and also want metricsAggregation. These use cases don't get to
-    // aggregateMetrics because the new implementation is able to honor their table config setting
-    // of noDict on STRING/BYTES. Without metrics aggregation, memory pressure increases.
-    // So to continue aggregating metrics for such cases, we will create dictionary even
-    // if the column is part of noDictionary set from table config
-    if (fieldSpec instanceof DimensionFieldSpec && isAggregateMetricsEnabled() && (dataType == STRING
-        || dataType == BYTES)) {
-      _logger.info("Aggregate metrics is enabled. Will create dictionary in consuming segment for column {} of type {}",
-          column, dataType);
+    // Metrics aggregation keys each row on the dictionary ids of the dimension and time columns (see
+    // getOrCreateDocId), so those columns must be dictionary encoded in the consuming segment even when the table
+    // config marks them as no-dictionary. The consuming-segment dictionary is a transient structure that only exists
+    // to drive the in-memory rollup; the committed segment is rebuilt from the table config (see
+    // RealtimeSegmentConverter), so the no-dictionary setting is still honored there. Metric columns are excluded:
+    // aggregated values are mutated in place in the raw forward index and must stay no-dictionary.
+    FieldSpec.FieldType fieldType = fieldSpec.getFieldType();
+    if (isAggregateMetricsEnabled() && (fieldType == FieldSpec.FieldType.DIMENSION
+        || fieldType == FieldSpec.FieldType.DATE_TIME || fieldType == FieldSpec.FieldType.TIME)) {
+      _logger.info("Metrics aggregation is enabled. Will create dictionary in consuming segment for key column: {} of "
+          + "type: {}", column, dataType);
       return false;
     }
     // So don't create dictionary if the column (1) is member of noDictionary, and (2) is single-value or multi-value
@@ -601,36 +602,12 @@ public class MutableSegmentImpl implements MutableSegment {
 
   public SegmentPartitionConfig getSegmentPartitionConfig() {
     if (_partitionColumn != null) {
-      return new SegmentPartitionConfig(Collections.singletonMap(_partitionColumn,
+      return new SegmentPartitionConfig(Map.of(_partitionColumn,
           new ColumnPartitionConfig(_partitionFunction.getName(), _partitionFunction.getNumPartitions(),
               _partitionFunction.getFunctionConfig())));
     } else {
       return null;
     }
-  }
-
-  /**
-   * Get min time from the segment, based on the time column, only used by Kafka HLC.
-   */
-  @Deprecated
-  public long getMinTime() {
-    Long minTime = IngestionUtils.extractTimeValue(_indexContainerMap.get(_timeColumnName)._minValue);
-    if (minTime != null) {
-      return minTime;
-    }
-    return Long.MAX_VALUE;
-  }
-
-  /**
-   * Get max time from the segment, based on the time column, only used by Kafka HLC.
-   */
-  @Deprecated
-  public long getMaxTime() {
-    Long maxTime = IngestionUtils.extractTimeValue(_indexContainerMap.get(_timeColumnName)._maxValue);
-    if (maxTime != null) {
-      return maxTime;
-    }
-    return Long.MIN_VALUE;
   }
 
   @Override
@@ -749,10 +726,8 @@ public class MutableSegmentImpl implements MutableSegment {
     }
   }
 
-  /**
-   * Updates ingestion timestamp metadata. This is a public function to allow
-   * external components to update the ingestion timestamp metadata without indexing a row.
-   */
+  /// Updates ingestion timestamp metadata. This is a public function to allow
+  /// external components to update the ingestion timestamp metadata without indexing a row.
   public void updateIngestionTimestamp(long recordIngestionTimeMs) {
     long now = System.currentTimeMillis();
     _latestIngestionTimeMs = Math.max(_latestIngestionTimeMs, recordIngestionTimeMs);
@@ -788,7 +763,8 @@ public class MutableSegmentImpl implements MutableSegment {
   private Comparable getComparisonValue(GenericRow row) {
     int numComparisonColumns = _upsertComparisonColumns.size();
     if (numComparisonColumns == 1) {
-      return (Comparable) row.getValue(_upsertComparisonColumns.get(0));
+      String comparisonColumn = _upsertComparisonColumns.get(0);
+      return toComparable(row.getValue(comparisonColumn));
     }
 
     Comparable[] comparisonValues = new Comparable[numComparisonColumns];
@@ -805,22 +781,16 @@ public class MutableSegmentImpl implements MutableSegment {
             "Documents must have exactly 1 non-null comparison column value");
 
         comparableIndex = i;
-
-        Object comparisonValue = row.getValue(columnName);
-        Preconditions.checkState(comparisonValue instanceof Comparable,
-            "Upsert comparison column: %s must be comparable", columnName);
-        comparisonValues[i] = (Comparable) comparisonValue;
+        comparisonValues[i] = toComparable(row.getValue(columnName));
       }
     }
     Preconditions.checkState(comparableIndex != -1, "Documents must have exactly 1 non-null comparison column value");
     return new ComparisonColumns(comparisonValues, comparableIndex);
   }
 
-  /**
-   * @param row
-   * @throws UnsupportedOperationException if the length of an MV column would exceed the
-   * capacity of a chunk in the ForwardIndex
-   */
+  /// @param row
+  /// @throws UnsupportedOperationException if the length of an MV column would exceed the
+  /// capacity of a chunk in the ForwardIndex
   private void validateLengthOfMVColumns(GenericRow row)
       throws UnsupportedOperationException {
     for (Map.Entry<String, IndexContainer> entry : _indexContainerMap.entrySet()) {
@@ -940,6 +910,17 @@ public class MutableSegmentImpl implements MutableSegment {
         // Update numValues info
         indexContainer._valuesInfo.updateSVNumValues();
 
+        // Route OPEN_STRUCT values to the dedicated mutable index. OPEN_STRUCT has no forward
+        // index / dictionary / min-max, so the standard per-IndexType loop and the comparable
+        // tracking below would be no-ops at best and crash at worst (Map is not Comparable).
+        if (dataType == DataType.OPEN_STRUCT) {
+          MutableIndex openStructIndex = indexContainer._mutableIndexes.get(StandardIndexes.openStruct());
+          if (openStructIndex != null) {
+            openStructIndex.add(value, -1, docId);
+          }
+          continue;
+        }
+
         // Update indexes
         int dictId = indexContainer._dictId;
         for (Map.Entry<IndexType, MutableIndex> indexEntry : indexContainer._mutableIndexes.entrySet()) {
@@ -956,14 +937,7 @@ public class MutableSegmentImpl implements MutableSegment {
           // Update min/max value from raw value
           // NOTE: Skip updating min/max value for aggregated metrics because the value will change over time.
           if (!isAggregateMetricsEnabled() || fieldSpec.getFieldType() != FieldSpec.FieldType.METRIC) {
-            Comparable comparable;
-            if (dataType == BYTES) {
-              comparable = new ByteArray((byte[]) value);
-            } else if (dataType == MAP) {
-              comparable = new ByteArray(MapUtils.serializeMap((Map) value));
-            } else {
-              comparable = (Comparable) value;
-            }
+            Comparable comparable = toComparableValue(value, dataType, column);
             if (indexContainer._minValue == null) {
               indexContainer._minValue = comparable;
               indexContainer._maxValue = comparable;
@@ -1014,6 +988,29 @@ public class MutableSegmentImpl implements MutableSegment {
       _multiColumnTextIndex.add(_multiColumnValues);
       Collections.fill(_multiColumnValues, null);
     }
+  }
+
+  /// Wraps a raw comparison-column value as a Comparable without a per-row schema lookup: a byte[] (a BYTES or UUID
+  /// comparison column) becomes a ByteArray; every other type is already Comparable. Mirrors
+  /// UpsertUtils.SingleComparisonColumnReader so the write and read paths agree.
+  private static Comparable toComparable(Object value) {
+    if (value instanceof byte[]) {
+      return new ByteArray((byte[]) value);
+    }
+    Preconditions.checkState(value instanceof Comparable, "Upsert comparison column value must be comparable: %s",
+        value);
+    return (Comparable) value;
+  }
+
+  private Comparable toComparableValue(Object value, DataType dataType, @Nullable String columnName) {
+    if (dataType == MAP) {
+      return new ByteArray(MapUtils.serializeMap((Map) value));
+    }
+    if (dataType.getStoredType() == BYTES) {
+      return new ByteArray((byte[]) value);
+    }
+    Preconditions.checkState(value instanceof Comparable, "Column: %s must be comparable", columnName);
+    return (Comparable) value;
   }
 
   private void updateIndexCapacityThresholdBreached(MutableIndex mutableIndex, IndexType indexType, String column) {
@@ -1251,6 +1248,32 @@ public class MutableSegmentImpl implements MutableSegment {
   }
 
   @Override
+  public boolean hasNoQueryableDocs() {
+    if (_partitionUpsertMetadataManager == null) {
+      return false;
+    }
+    UpsertViewManager viewManager = _partitionUpsertMetadataManager.getUpsertViewManager();
+    if (viewManager != null) {
+      MutableRoaringBitmap queryableDocIdsSnapshot = viewManager.getQueryableDocIdsSnapshot(this);
+      if (queryableDocIdsSnapshot != null) {
+        return queryableDocIdsSnapshot.isEmpty();
+      }
+      return false;
+    }
+    ThreadSafeMutableRoaringBitmap queryableDocIds = getQueryableDocIds();
+    if (queryableDocIds != null) {
+      return queryableDocIds.isEmpty();
+    }
+    ThreadSafeMutableRoaringBitmap validDocIds = getValidDocIds();
+    return validDocIds != null && validDocIds.isEmpty();
+  }
+
+  @Override
+  public boolean hasNoValidDocs() {
+    return UpsertUtils.hasNoValidDocs(_partitionUpsertMetadataManager, this);
+  }
+
+  @Override
   public GenericRow getRecord(int docId, GenericRow reuse) {
     try (PinotSegmentRecordReader recordReader = new PinotSegmentRecordReader()) {
       recordReader.init(this);
@@ -1271,11 +1294,9 @@ public class MutableSegmentImpl implements MutableSegment {
     }
   }
 
-  /**
-   * Calls commit() on all mutable indexes. This is used in preparation for realtime segment conversion.
-   * .commit() can be implemented per index to perform any required actions before using mutable segment
-   * artifacts to optimize immutable segment build.
-   */
+  /// Calls commit() on all mutable indexes. This is used in preparation for realtime segment conversion.
+  /// .commit() can be implemented per index to perform any required actions before using mutable segment
+  /// artifacts to optimize immutable segment build.
   public void commit() {
     for (IndexContainer indexContainer : _indexContainerMap.values()) {
       for (MutableIndex mutableIndex : indexContainer._mutableIndexes.values()) {
@@ -1286,6 +1307,18 @@ public class MutableSegmentImpl implements MutableSegment {
     if (_multiColumnTextIndex != null) {
       _multiColumnTextIndex.commit();
     }
+  }
+
+  /// Returns the per-column mutable OPEN_STRUCT index, or `null` if the column is not OPEN_STRUCT
+  /// or the index has not been initialized.
+  @Nullable
+  public MutableOpenStructIndex getOpenStructIndex(String column) {
+    IndexContainer container = _indexContainerMap.get(column);
+    if (container == null) {
+      return null;
+    }
+    MutableIndex index = container._mutableIndexes.get(StandardIndexes.openStruct());
+    return index instanceof MutableOpenStructIndex ? (MutableOpenStructIndex) index : null;
   }
 
   @Override
@@ -1430,7 +1463,8 @@ public class MutableSegmentImpl implements MutableSegment {
       docIds[i] = i;
     }
 
-    DataType storedType = indexContainer._fieldSpec.getDataType().getStoredType();
+    DataType dataType = indexContainer._fieldSpec.getDataType();
+    DataType storedType = dataType.getStoredType();
     switch (storedType) {
       case INT:
         IntArrays.quickSort(docIds, (d1, d2) -> Integer.compare(forwardIndex.getInt(d1), forwardIndex.getInt(d2)));
@@ -1452,8 +1486,13 @@ public class MutableSegmentImpl implements MutableSegment {
         IntArrays.quickSort(docIds, (d1, d2) -> forwardIndex.getString(d1).compareTo(forwardIndex.getString(d2)));
         break;
       case BYTES:
-        IntArrays.quickSort(docIds,
-            (d1, d2) -> ByteArray.compare(forwardIndex.getBytes(d1), forwardIndex.getBytes(d2)));
+        if (dataType == DataType.UUID) {
+          IntArrays.quickSort(docIds,
+              (d1, d2) -> UuidUtils.compare(forwardIndex.getBytes(d1), forwardIndex.getBytes(d2)));
+        } else {
+          IntArrays.quickSort(docIds,
+              (d1, d2) -> ByteArray.compare(forwardIndex.getBytes(d1), forwardIndex.getBytes(d2)));
+        }
         break;
       default:
         throw new UnsupportedOperationException(
@@ -1463,21 +1502,19 @@ public class MutableSegmentImpl implements MutableSegment {
     return docIds;
   }
 
-  /**
-   * Helper function that returns docId, depends on the following scenarios.
-   * <ul>
-   *   <li> If metrics aggregation is enabled and if the dimension values were already seen, return existing docIds
-   *   </li>
-   *   <li> Else, this function will create and return a new docId. </li>
-   * </ul>
-   *
-   * */
+  /// Helper function that returns docId, depends on the following scenarios.
+  ///
+  /// - If metrics aggregation is enabled and if the dimension values were already seen, return existing docIds
+  /// - Else, this function will create and return a new docId.
   private int getOrCreateDocId() {
     if (!isAggregateMetricsEnabled()) {
       return _numDocsIndexed;
     }
 
     int i = 0;
+    // Dimension and time columns form the aggregation key. They are always dictionary encoded in the consuming
+    // segment (isNoDictionaryColumn forces a dictionary on them when aggregation is enabled), so the _dictId read
+    // below is always valid. Keep this set of columns in sync with the field types forced there.
     int[] dictIds = new int[_numKeyColumns]; // dimensions + date time columns + time column.
 
     // FIXME: this for loop breaks for multi value dimensions. https://github.com/apache/pinot/issues/3867
@@ -1490,22 +1527,21 @@ public class MutableSegmentImpl implements MutableSegment {
     return _recordIdMap.put(new FixedIntArray(dictIds));
   }
 
-  /**
-   * Helper method to enable/initialize aggregation of metrics, based on following conditions:
-   * <ul>
-   *   <li> Config to enable aggregation of metrics is specified. </li>
-   *   <li> All dimensions and time are dictionary encoded. This is because an integer array containing dictionary id's
-   *        is used as key for dimensions to record Id map. </li>
-   *   <li> None of the metrics are dictionary encoded. </li>
-   *   <li> All columns should be single-valued (see https://github.com/apache/pinot/issues/3867)</li>
-   * </ul>
-   *
-   * TODO: Eliminate the requirement on dictionary encoding for dimension and metric columns.
-   *
-   * @param config Segment config.
-   *
-   * @return Map from dictionary id array to doc id, null if metrics aggregation cannot be enabled.
-   */
+  /// Enables and initializes metrics aggregation for the consuming segment when configured and feasible.
+  ///
+  /// Aggregation is enabled when all of the following hold:
+  /// - The `aggregateMetrics` flag or ingestion `aggregationConfigs` is specified.
+  /// - No metric column is dictionary encoded. Aggregated values are mutated in place in the raw forward index, so
+  ///   metrics must stay no-dictionary.
+  /// - All metric and dimension columns are single-valued (see https://github.com/apache/pinot/issues/3867).
+  ///
+  /// Dimension and time columns form the aggregation key via their dictionary ids (see [#getOrCreateDocId]), so they
+  /// must be dictionary encoded. This is not required from the caller: [#isNoDictionaryColumn] forces a dictionary on
+  /// those columns in the consuming segment whenever aggregation is enabled, even when the table config marks them as
+  /// no-dictionary. The committed segment is rebuilt from the table config, so the no-dictionary setting is still
+  /// honored there.
+  ///
+  /// Returns the map from dictionary id array to doc id, or `null` if metrics aggregation cannot be enabled.
   private IdMap<FixedIntArray> enableMetricsAggregationIfPossible(RealtimeSegmentConfig config) {
     Set<String> noDictionaryColumns =
         FieldIndexConfigsUtil.columnsWithIndexDisabled(StandardIndexes.dictionary(), config.getIndexConfigByCol());
@@ -1531,29 +1567,12 @@ public class MutableSegmentImpl implements MutableSegment {
       }
     }
 
-    // All dimension columns should be dictionary encoded.
-    // All dimension columns must be single value
+    // All dimension columns must be single value. No-dictionary dimensions are supported: isNoDictionaryColumn()
+    // forces a dictionary on them in the consuming segment so they can be used as the aggregation key.
     for (FieldSpec fieldSpec : _physicalDimensionFieldSpecs) {
-      String dimension = fieldSpec.getName();
-      if (noDictionaryColumns.contains(dimension)) {
-        _logger.warn("Metrics aggregation cannot be turned ON in presence of no-dictionary dimensions, eg: {}",
-            dimension);
-        return null;
-      }
-
       if (!fieldSpec.isSingleValueField()) {
         _logger.warn("Metrics aggregation cannot be turned ON in presence of multi-value dimension columns, eg: {}",
-            dimension);
-        return null;
-      }
-    }
-
-    // Time columns should be dictionary encoded.
-    for (String timeColumnName : _physicalTimeColumnNames) {
-      if (noDictionaryColumns.contains(timeColumnName)) {
-        _logger.warn(
-            "Metrics aggregation cannot be turned ON in presence of no-dictionary datetime/time columns, eg: {}",
-            timeColumnName);
+            fieldSpec.getName());
         return null;
       }
     }
@@ -1606,12 +1625,10 @@ public class MutableSegmentImpl implements MutableSegment {
       _maxNumValuesPerMVEntry = Math.max(_maxNumValuesPerMVEntry, numValuesInMVEntry);
     }
 
-    /**
-     * When an MV VarByte column is created with noDict, the realtime segment is still created with a dictionary.
-     * When the realtime segment is converted to offline segment, the offline segment creates a noDict column.
-     * MultiValueVarByteRawIndexCreator requires the maxRowLengthInBytes. Refer to OSS issue
-     * https://github.com/apache/pinot/issues/10127 for more details.
-     */
+    /// When an MV VarByte column is created with noDict, the realtime segment is still created with a dictionary.
+    /// When the realtime segment is converted to offline segment, the offline segment creates a noDict column.
+    /// MultiValueVarByteRawIndexCreator requires the maxRowLengthInBytes. Refer to OSS issue
+    /// https://github.com/apache/pinot/issues/10127 for more details.
     void updateVarByteMVMaxRowLengthInBytes(Object entry, DataType dataType) {
       // MV support for BigDecimal is not available.
       if (dataType != STRING && dataType != BYTES) {
@@ -1658,22 +1675,21 @@ public class MutableSegmentImpl implements MutableSegment {
     volatile Comparable _minValue;
     volatile Comparable _maxValue;
 
-    /**
-     * The dictionary id for the latest single-value record.
-     * It is set on {@link #updateDictionary(GenericRow)} and read in {@link #addNewRow(int, GenericRow)}
-     */
+    /// The dictionary id for the latest single-value record.
+    /// It is set on [#updateDictionary(GenericRow)] and read in [#addNewRow(int, GenericRow)]
     int _dictId = Integer.MIN_VALUE;
-    /**
-     * The dictionary ids for the latest multi-value record.
-     * It is set on {@link #updateDictionary(GenericRow)} and read in {@link #addNewRow(int, GenericRow)}
-     */
+    /// The dictionary ids for the latest multi-value record.
+    /// It is set on [#updateDictionary(GenericRow)] and read in [#addNewRow(int, GenericRow)]
     int[] _dictIds;
 
     IndexContainer(FieldSpec fieldSpec, @Nullable PartitionFunction partitionFunction,
         @Nullable Set<Integer> partitions, ValuesInfo valuesInfo, Map<IndexType, MutableIndex> mutableIndexes,
         @Nullable MutableDictionary dictionary, @Nullable MutableNullValueVector nullValueVector,
         @Nullable String sourceColumn, @Nullable ValueAggregator valueAggregator) {
-      Preconditions.checkArgument(mutableIndexes.containsKey(StandardIndexes.forward()), "Forward index is required");
+      Preconditions.checkArgument(
+          mutableIndexes.containsKey(StandardIndexes.forward())
+              || mutableIndexes.containsKey(StandardIndexes.openStruct()),
+          "Forward index or OPEN_STRUCT index is required");
       _fieldSpec = fieldSpec;
       _mutableIndexes = mutableIndexes;
       _dictionary = dictionary;
@@ -1686,6 +1702,11 @@ public class MutableSegmentImpl implements MutableSegment {
     }
 
     DataSource toDataSource() {
+      if (_fieldSpec.getDataType() == DataType.OPEN_STRUCT) {
+        MutableIndex idx = _mutableIndexes.get(StandardIndexes.openStruct());
+        return new MutableOpenStructDataSource((ComplexFieldSpec) _fieldSpec, (MutableOpenStructIndex) idx,
+            _numDocsIndexed);
+      }
       if (_fieldSpec.getDataType() == MAP) {
         return new MutableMapDataSource(_fieldSpec, _numDocsIndexed, _valuesInfo._numValues,
             _valuesInfo._maxNumValuesPerMVEntry, _dictionary == null ? -1 : _dictionary.length(), _partitionFunction,
